<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="5dp"
    android:background="@drawable/bordered_box">

    <TextView
        android:id="@+id/personal_reservation_box_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_reservation_box_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/personal_reservation_box_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sport_football"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/personal_reservation_box_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_box_duration"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/personal_reservation_box_playground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_box_playground_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</LinearLayout>